src/main/java/com/example/mybookshopapp/errors/ApproveContactException.java
package com.example.mybookshopapp.errors;

public class ApproveContactException extends Exception{
    public ApproveContactException(String message){
        super(message);
    }
}
